# QuarkPhy

./: README.md
.history/Vplot/: README_20240625174720.md  README_20240801174836.md  README_20240801174906.md
CAMAC/: .gitignore  Makefile  lib.c  scaler.c  scaler.c~
RemoteOscilloscop/: .gitignore  README.md  pyproject.toml
RemoteOscilloscop/src/remoteoscilloscop/: remoteocillo.py
RemoteOscilloscop/src/remoteoscilloscope/: capture_single_photo.py  connect.py  lib.py  muon_decay.py  plot.ipynb  plot.py  test.py
RemoteOscilloscope/: .gitignore  README.md  pyproject.toml  run.bash
RemoteOscilloscope/src/remoteoscilloscope/: mip.py  muon_decay.py  muon_decay_lib.py  plot.ipynb
Vplot/: .gitignore  pyproject.toml
Vplot/src/: beta_decay.ipynb  lifetime.ipynb  mpel.ipynb
Vplot/src/fitting/: lifetime.ipynb
Vplot/src/vplot/: mip_fit.ipynb  vplot.ipynb  vplot_ociillo.ipynb
simulation/: Cargo.toml
simulation/src/: pmt_noise2.rs  pmt_noise3.rs
